--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         </activity>
 
         <activity
-            android:name=".TutorialDetailActivity"
+            android:name=".ui.home.TutorialDetailActivity"
             android:label="Tutorial Detail"
             android:parentActivityName=".MainActivity">
             <meta-data
