--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ media3Exoplayer = "1.3.1"
 navigationFragment = "2.6.0"
 navigationUi = "2.6.0"
 annotationJvm = "1.8.0"
+oapiJavaSdk = "release-V4-2.0.2"
 
 [libraries]
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
@@ -31,6 +32,7 @@ media3-ui = { module = "androidx.media3:media3-ui", version.ref = "media3Exoplay
 navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigationFragment" }
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigationUi" }
 annotation-jvm = { group = "androidx.annotation", name = "annotation-jvm", version.ref = "annotationJvm" }
+oapi-java-sdk = { module = "cn.bigmodel.openapi:oapi-java-sdk", version.ref = "oapiJavaSdk" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
